hphp/hack/test/typecheck/splat/type_splat_optional_then_splat.php.exp
ERROR: File "type_splat_optional_then_splat.php", line 41, characters 9-23:
Invalid argument (Typing[4110])
  File "type_splat_optional_then_splat.php", line 17, characters 9-13:
  Expected `(int, optional bool, ..._)`
  File "type_splat_optional_then_splat.php", line 41, characters 9-23:
  But got `()`
ERROR: File "type_splat_optional_then_splat.php", line 51, characters 9-27:
Invalid argument (Typing[4323])
  File "type_splat_optional_then_splat.php", line 21, characters 30-30:
  `T` is a constrained type parameter
  File "type_splat_optional_then_splat.php", line 21, characters 35-49:
  This type constraint is violated
  File "type_splat_optional_then_splat.php", line 21, characters 35-49:
  Expected `(int, mixed...)`
  File "type_splat_optional_then_splat.php", line 51, characters 9-27:
  But got `()`
ERROR: File "type_splat_optional_then_splat.php", line 53, characters 9-27:
Invalid argument (Typing[4323])
  File "type_splat_optional_then_splat.php", line 21, characters 30-30:
  `T` is a constrained type parameter
  File "type_splat_optional_then_splat.php", line 21, characters 35-49:
  This type constraint is violated
  File "type_splat_optional_then_splat.php", line 21, characters 35-49:
  Expected `(int, mixed...)`
  File "type_splat_optional_then_splat.php", line 53, characters 9-27:
  But got `()`
